# sample-metadata-curation

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
resources/: country-codes.csv
sample_metadata_curation/: __init__.py  biome.py  constants.py  curate.py  curate_new.py  install_resources.py  location.py  sample_parser.py
sample_metadata_curation/resources/: country_to_cc_mapping.csv  oceans_and_seas.txt
tests/: test_curate.py
tests/fixtures/: test.json
